modificato diagramma di GANTT

--- a/documenti/diagramma_di_gantt.html
+++ b/documenti/diagramma_di_gantt.html
@@ -356,11 +356,11 @@ th.gantt-day-header {
       </tr>
       <tr>
         <td class="header">Termine:</td>
-        <td>17 gen 2019</td>
+        <td>21 gen 2019</td>
       </tr>
       <tr>
         <td class="header">Data rapporto:</td>
-        <td>4 feb 2019</td>
+        <td>18 feb 2019</td>
       </tr>
     </table>
     <div class="separator"></div>
@@ -396,7 +396,7 @@ th.gantt-day-header {
               </a>
             </td>
             <td>
-              <span style="white-space: nowrap; font-weight: bold;">12d 1h </span>
+              <span style="white-space: nowrap; font-weight: bold;">12d 7h </span>
             </td>
           </tr>
           <tr class="even">
@@ -409,7 +409,7 @@ th.gantt-day-header {
               </a>
             </td>
             <td>
-              <span>1h </span>
+              <span>2h </span>
             </td>
           </tr>
           <tr class="odd">
@@ -422,7 +422,7 @@ th.gantt-day-header {
               </a>
             </td>
             <td>
-              <span>5h </span>
+              <span>1d 2h </span>
             </td>
           </tr>
           <tr class="even">
@@ -610,7 +610,7 @@ th.gantt-day-header {
               <div style="width: 601px; white-space: nowrap;">
                 <div class="gantt-empty-begin" style="width: 8px;"></div>
                 <div class="gantt-empty-end"></div>
-                <div class="gantt-resources">Mastella Simone, Di Vita Edoardo </div>
+                <div class="gantt-resources">Mastella Simone, Di Vita Edoardo , Bertelli Riccardo</div>
               </div>
             </td>
           </tr>
@@ -618,7 +618,7 @@ th.gantt-day-header {
             <td colspan="31">
               <div style="width: 601px; white-space: nowrap;">
                 <div class="gantt-empty-begin" style="width: 8px;"></div>
-                <div class="gantt-complete-notdone" style="width: 2px;"></div>
+                <div class="gantt-complete-notdone" style="width: 22px;"></div>
                 <div class="gantt-empty-end"></div>
                 <div class="gantt-resources">Adamo Elia, Raffa Giacomo</div>
               </div>
@@ -627,8 +627,8 @@ th.gantt-day-header {
           <tr class="even">
             <td colspan="31">
               <div style="width: 601px; white-space: nowrap;">
-                <div class="gantt-empty-begin" style="width: 28px;"></div>
-                <div class="gantt-complete-notdone" style="width: 80px;"></div>
+                <div class="gantt-empty-begin" style="width: 108px;"></div>
+                <div class="gantt-complete-notdone" style="width: 40px;"></div>
                 <div class="gantt-empty-end"></div>
                 <div class="gantt-resources">Scarpante Simone, Taut Denisa, Vergaro Jacopo</div>
               </div>
@@ -637,7 +637,7 @@ th.gantt-day-header {
           <tr class="odd">
             <td colspan="31">
               <div style="width: 601px; white-space: nowrap;">
-                <div class="gantt-empty-begin" style="width: 28px;"></div>
+                <div class="gantt-empty-begin" style="width: 108px;"></div>
                 <div class="gantt-complete-notdone" style="width: 142px;"></div>
                 <div class="gantt-empty-end"></div>
                 <div class="gantt-resources">Guerini Nicolo</div>
@@ -773,10 +773,10 @@ th.gantt-day-header {
               <span>Jan 9</span>
             </td>
             <td>
-              <span>Jan 17</span>
+              <span>Jan 21</span>
             </td>
             <td>
-              <span>12d 1h </span>
+              <span>12d 7h </span>
             </td>
             <td></td>
             <td>
@@ -800,7 +800,7 @@ th.gantt-day-header {
               <span>Jan 9</span>
             </td>
             <td>
-              <span>1h </span>
+              <span>2h </span>
             </td>
             <td>
               <span>0%
@@ -809,7 +809,7 @@ th.gantt-day-header {
             <td>
               <span></span>
             </td>
-            <td>Mastella Simone, Di Vita Edoardo </td>
+            <td>Mastella Simone, Di Vita Edoardo , Bertelli Riccardo</td>
           </tr>
           <tr class="odd" style="">
             <td>
@@ -824,10 +824,10 @@ th.gantt-day-header {
               <span>Jan 9</span>
             </td>
             <td>
-              <span>Jan 9</span>
+              <span>Jan 10</span>
             </td>
             <td>
-              <span>5h </span>
+              <span>1d 2h </span>
             </td>
             <td>
               <span>0%
@@ -848,10 +848,10 @@ th.gantt-day-header {
               </a>
             </td>
             <td>
-              <span>Jan 10</span>
+              <span>Jan 14</span>
             </td>
             <td>
-              <span>Jan 14</span>
+              <span>Jan 16</span>
             </td>
             <td>
               <span>1d 2h </span>
@@ -875,10 +875,10 @@ th.gantt-day-header {
               </a>
             </td>
             <td>
-              <span>Jan 10</span>
+              <span>Jan 14</span>
             </td>
             <td>
-              <span>Jan 17</span>
+              <span>Jan 21</span>
             </td>
             <td>
               <span>1d 2h </span>
