--- a/manuali/sito/esempi.html
+++ b/manuali/sito/esempi.html
@@ -3,6 +3,18 @@
 		<title>Esempi Comandi</title>
 	</head>
 	<body>
-		<div>foobar</div>
+		<h2>Schema</h2>
+		<p>Selezio al'argomento da visualizzare</p>
+
+		<form action="lib/php_funzioni.php">
+		  <select name="get_select_from_query">
+			<option value="SELECT * FROM entita">Query 1</option>
+			<option value="SELECT * FROM entita">Query 2</option>
+			<option value="SELECT * FROM entita">Query 3</option>
+			<option value="SELECT * FROM entita">Query 4</option>
+		  </select>
+		  <br><br>
+		  <input type="submit">
+		</form>
 	</body>
 </html>
